# hacks-ai-ufo-23

./: .example.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_predictions.xlsx  worker.Dockerfile
Department/: README.md  package-lock.json  package.json  vite.config.js
Department/src/: App.vue  main.js
Department/src/assets/: main.css  tooltip.css
Department/src/components/: DataRow.vue  FindBar.vue  ReasonRow.vue  Widget.vue  userIco.vue
Department/src/router/: index.js
Department/src/stores/: index.js
Department/src/views/: LoginForm.vue  WidgetInfo.vue  WidgetsView.vue
ML/: model.ipynb  pipline.py  predict_test.ipynb  preproc.ipynb  requirements.txt  start.ipynb
app/: background.py  database.py  dependencies.py  main.py  minio.py  settings.py
app/models/: auth.py  file_created.py
app/queries/: add_file.edgeql  add_file_async_edgeql.py  add_subject.edgeql  add_subject_async_edgeql.py  add_task.edgeql  add_task_async_edgeql.py  add_token.edgeql  add_token_async_edgeql.py  add_user.edgeql  add_user_async_edgeql.py  blocking.py  delete_token.edgeql  delete_token_async_edgeql.py  get_subject.edgeql  get_subject_async_edgeql.py  get_subjects.edgeql  get_subjects_async_edgeql.py  get_tasks.edgeql  get_tasks_async_edgeql.py  get_user_by_auth_data.edgeql  get_user_by_auth_data_async_edgeql.py  get_user_by_token.edgeql  get_user_by_token_async_edgeql.py  search_by_obj_key.edgeql  search_by_obj_key_async_edgeql.py
app/routers/: auth.py  search.py  subjects.py  tasks.py  upload.py
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql  00010.edgeql  00011.edgeql  00012.edgeql  00013.edgeql  00014.edgeql  00015.edgeql
parsing/: forecast.py
