[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.98.0"
edgedb = "^1.5.0"
uvicorn = "^0.22.0"
dramatiq = "^1.14.2"
bcrypt = "^4.0.1"
aiofiles = "^23.1.0"
miniopy-async = "^1.15"
python-multipart = "^0.0.6"
redis = "^4.5.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
black = "^23.3.0"
ruff = "^0.0.275"

[tool.ruff]
line-length = 99
src = ["app"]
select = ["ALL"]
ignore = [
]
fix = true

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[tool.black]
line-length = 99
target-version = ['py311']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.mypy]
plugins = "pydantic.mypy"
python_version = "3.11"
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
